# ComfyUI-RMBG

./: AILab_BiRefNet.py  AILab_BodySegment.py  AILab_ClothSegment.py  AILab_FaceSegment.py  AILab_FashionSegment.py  AILab_ImageMaskTools.py  AILab_RMBG.py  AILab_Segment.py  AILab_SegmentV2.py  LICENSE  README.md  __init__.py  ailab_RMBG.py  pyproject.toml  requirements.txt  update.md
.github/: FUNDING.yml
docs/: version_compatibility.md
example_workflows/: Comfyu-rmbg_v2.2.1_node_sample.json  LoadImageNode.json  LoadImage_Node.json  image_mask_preview.json
locales/en/: nodeDefs.json
locales/fr/: nodeDefs.json
locales/ja/: nodeDefs.json
locales/ko/: nodeDefs.json
locales/ru/: nodeDefs.json
locales/zh/: nodeDefs.json
web/js/: appearance.js
